[gd_scene load_steps=4 format=3 uid="uid://b3rcakn7ft13"]

[ext_resource type="Script" path="res://ui/in_game/in_game.gd" id="1_jqtnr"]
[ext_resource type="PackedScene" uid="uid://4kygqvlbl0r5" path="res://ui/in_game/building_manager/building_manager.tscn" id="2_avjm1"]
[ext_resource type="PackedScene" uid="uid://chyhhxggmxssm" path="res://ui/in_game/unit_manager/unit_manager.tscn" id="3_3gh2r"]

[node name="InGame" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2
script = ExtResource("1_jqtnr")

[node name="Info" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AreaName" type="Label" parent="Info"]
layout_mode = 2
text = "Area name"

[node name="BuildingManager" parent="." instance=ExtResource("2_avjm1")]
layout_mode = 2

[node name="UnitManager" parent="." instance=ExtResource("3_3gh2r")]
layout_mode = 2
